Trying to fix horizontal scroll again.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -580,10 +580,6 @@ video {
   position: relative;
 }
 
-.-right-52 {
-  right: -13rem;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -612,6 +608,10 @@ video {
   top: 100%;
 }
 
+.-right-52 {
+  right: -13rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -630,11 +630,6 @@ video {
 
 .m-6 {
   margin: 1.5rem;
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .mx-3 {
@@ -665,6 +660,11 @@ video {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .mt-10 {
@@ -706,6 +706,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .grow {
@@ -801,10 +805,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-}
-
-.p-7 {
-  padding: 1.75rem;
 }
 
 .px-2 {
@@ -1059,11 +1059,6 @@ video {
     margin: 2rem;
   }
 
-  .lg\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -1086,10 +1081,6 @@ video {
 
   .lg\:w-24 {
     width: 6rem;
-  }
-
-  .lg\:max-w-full {
-    max-width: 100%;
   }
 
   .lg\:flex-1 {
