--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -4,8 +4,11 @@
     scroll-behavior: smooth;
     scroll-padding: 4rem;
     transition: all .5s ease;
-      
 }
+html{
+    overflow-x: hidden;
+}
+
 body{
     width: 100%;
     margin: 0;
